tests/invalid/Intersection_Invalid_1.whiley
type EmptyList is [int] & [real]

function size(EmptyList l) -> int:
    return |l|

function f([int] x) -> int:
    return size(x)
